--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.4",
+    "@types/mdx": "^2.0.10",
     "gray-matter": "^4.0.3",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
