--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
